# Bodenwerder

./: .gitattributes  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  README.md  index.html
3party/sqlite_amalgamation/: CMakeLists.txt
modules/Q1/golden/: CMakeLists.txt
modules/Q1/golden/Atomic.cpp/: CMakeLists.txt
modules/Q1/golden/Atomic.q1/: elementary.q1.types  model.q1.types  system.q1.types  theory.tome  varph.q1.types  varph.tome
modules/Q1/golden/Etalon.cpp/: CMakeLists.txt
modules/Q1/golden/Etalon.fqsm/: CMakeLists.txt  README.md  aspects.q1.cpp  aspects.q1.h  elementary.q1.cpp  elementary.q1.h
modules/Q1/golden/Etalon.iqsm/: CMakeLists.txt
modules/Q1/golden/Etalon.iqsm_deprecated/: CMakeLists.txt
modules/Q1/golden/Etalon.mqsm/: CMakeLists.txt  aspects.q1.cpp  aspects.q1.h  elementary.q1.cpp  elementary.q1.h  resource.q1.cpp
modules/Q1/golden/Etalon.q1/: aspects.q1.types  elementary.q1.types  resource.q1.types
modules/QGame/Foundation/: CMakeLists.txt  hexes.cpp  hexes.h
modules/Toy.cpp/: CMakeLists.txt  main.cpp  render_demo.cpp  render_demo.h
modules/Toy.cpp/model/: model.cpp  model.h
modules/Toy.cpp/model.q1/: dummy.q1.types
modules/Toy.cpp/model/physics/: core.cpp  core.h
modules/Toy.cpp/renderer/: renderer.cpp
modules/base.cpp/: CMakeLists.txt
modules/base.cpp/interface/: cannonball.md
modules/base.cpp/interface/base/: _include.interface.h  _include.testing.h  function_ref.h  identifier.h  logging.h  maybe.h  nullableReference.h  pair.h  runtimeTypeId.h  serialization.h  shared_reference.h
modules/base.cpp/source/: logging.cpp
modules/base.cpp/source/testing/: ScopedTimer.cpp
modules/base.cpp/test/: _common.h  _main.cpp  serialization_roundtrip.cpp  smoke.cpp
modules/base.cpp/test/_utilities/: debug.h
modules/base.cpp/test/cannonball/: delta_demonstration.cpp  denseTable.cpp  draft_patch_build.cpp  patch_integrate.cpp  patch_merge.cpp  patch_operations.cpp  preview_future_world.cpp  projected_traversal_invariant.cpp  smoke.cpp
modules/base.cpp/test/containers/: denseTable.cpp  patch.cpp  relations.cpp  table.cpp  tableDelta.cpp  tableOverlay.cpp
modules/iQSM.cpp/: CMakeLists.txt  iQSM.tome
modules/iQSM.cpp/_management/: backlog.tome
modules/iQSM.cpp/interface/iQSM/: _DSL.include.h  _all.include.h  _forwards.h  aspects.h  dag.h  delta.h  field.h  identifier.h  logger.h  meta.h  particles.h  q1builtins.h  references.h  require.h  resources.h  schema.h  typeId.h  types.h  world.h
modules/iQSM.cpp/source/: dag.cpp  identifier.cpp  integration.cpp  logger.cpp  schema.cpp  transaction.cpp  validation.cpp
modules/iQSM.cpp/source/flow/: processing.cpp
modules/iQSM.cpp/source/helpers/: world.cpp
modules/iQSM.cpp/source/manipulators/: schema.cpp  world.cpp
modules/iQSM.cpp/source/state/: delta.cpp
modules/iQSM.cpp/test/: _common.h  _main.cpp  _model.h  caching_components.cpp  complex_constructor.cpp  dag.cpp  dagdata.cpp  delta_merge.cpp  dual_layer_model.cpp  etalon_model.cpp  globals.cpp  handle_lifecycle.cpp  handle_lifecycle.cpp.backup  immutable_containers_perf.cpp  immutable_containers_perf2.cpp  mass_operations.cpp  model_is_compileable.cpp  molecular_analysis_system.cpp  multistate_system.cpp  ownership.cpp  resource_example.cpp  resources.cpp  schema.cpp  schema_aspects.cpp  simpleworld.cpp  transaction2.cpp  transaction_repo.cpp  transaction_strategy.cpp  transient_usage.cpp  typenames.cpp  typenames_varph.cpp  validation.cpp  validation_anchors.cpp  validation_cache.cpp  validation_existence.cpp  worlddata.cpp
modules/iQSM.cpp/test/_utilities/: debug.h  function1f_loader.h  utilities.h
modules/iQSM.cpp/test/etalon/: model.cpp  model.h
modules/iQSM.cpp/test/known_issues/: merge_add_remove_constructor_issue.cpp
modules/iQSM.cpp/test/model/: simple.cpp  simple.h
modules/iQSM.cpp/test/multistate/: aspects.q1.cpp  aspects.q1.h  model.q1.cpp  model.q1.h  model.q1.types  multistate.q1.types
modules/iQSM.cpp/test/operations/: commit_snapshot_fanout.cpp  globals.cpp  transaction_repo.cpp
modules/iQSM.cpp/test/utilities/: debug.h  fooBar.h  utilities.h
modules/iQSM.cpp/test/validation/: caching_component.cpp  element_validator_clamp.cpp  placeholder.cpp  tag_globals.cpp
modules/iQSM.cpp/test/workshop/: linear_commits.cpp
modules/pQRF/: CMakeLists.txt  README.md
modules/pQRF/database/: engine.h  retrospection.h  sql.h  storage.cpp  storage.h
modules/pQRF/json/: document.h  engine.h  leaf.h  storage.cpp  storage.h
modules/raidenmamare.cpp/: CMakeLists.txt
modules/raidenmamare.cpp/aspects/: core.q1.types  device.q1.types  math.q1.types  primitive.q1.types  program.q1.types  renderer.q1.types.TODO  viewport.q1.types
modules/raidenmamare.cpp/aspects/controller/: basic.q1.types  camera.q1.types  dispatcher.q1.types
modules/raidenmamare.cpp/aspects/materials/: core.q1.types  program.q1.types  type.q1.types
modules/raidenmamare.cpp/aspects/primitives/: base.q1.types
modules/raidenmamare.cpp/aspects/scene/: actor.q1.types  camera.q1.types  core.q1.types  light.q1.types  node.q1.types  primitiveActor.q1.types  scene.q1.types
modules/raidenmamare.cpp/declaration/: math.q1.types  semantics.q1.types
modules/raidenmamare.cpp/declaration/assets/: geometry.q1.types  material.q1.types  shader.q1.types  texture.q1.types
modules/raidenmamare.cpp/declaration/controllers/: camera.q1.types  dispatcher.q1.types
modules/raidenmamare.cpp/declaration/renderer/: gl.q1.types  types.q1.types
modules/raidenmamare.cpp/declaration/resources/: geometries.q1.types  geometry.q1.types  manager.q1.types  material.q1.types  materials.q1.types  runtimes.q1.types  semantics.q1.types  shader.q1.types  (+5 more)
modules/raidenmamare.cpp/source/: core.cpp  core.q1.cpp  device.q1.cpp  engine.cpp  primitive.q1.cpp  program.q1.cpp  viewport.q1.cpp
modules/render_test.cpp/: CMakeLists.txt  main.cpp
stories/Toy.cpp/: CMakeLists.txt  application.cpp  application.h  main.cpp  ui.cpp  ui.h
stories/Toy.cpp/domain/: world.q1.types
stories/Toy.cpp/projection/: world.q1.cpp  world.q1.h
(+748 files in other folders)
